--- a/index.html
+++ b/index.html
@@ -153,14 +153,10 @@
                     <div class="content">
                         <div class="cont-title">
                             <div class="img-title">Growtopia</div>
-                            <div class="img-name">Produce</div>
+                            <div class="img-name">Harvest</div>
                         </div>
-                        <div class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-                            vitae
-                            repellat
-                            magnam dolorem assumenda totam facilis iure eveniet aliquam, reiciendis maxime! Sapiente at
-                            doloribus
-                            dolorem nostrum. Rem dolores eius autem.
+                        <div class="discription">Make harvesting a breeze with our reliable tools and equipment. From ergonomic shears to efficient harvesters, 
+                            we have everything you need to ensure a smooth and successful collection of your crops. Harvest with ease and efficiency.
                         </div>
                         <div class="see-more-btn">
                             <button>See More</button>
